--- a/src/components/Hero/styles.module.scss
+++ b/src/components/Hero/styles.module.scss
@@ -1,30 +1,59 @@
 .c-hero-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
-  background-color: #282c34;
-  color: white;
-  text-align: center;
+  position: relative;
 
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    animation: fadeIn 2s ease-in-out;
+  .textContainer {
+    position: absolute;
+    z-index: 10;
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      color: #333;
+    }
+
+    p {
+      font-size: 1.5rem;
+      margin-bottom: 2rem;
+      color: #666;
+    }
+
+    button {
+      padding: 0.75rem 2rem;
+      font-size: 1.2rem;
+      color: #fff;
+      background-color: #1491ff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      max-width: 150px;
+
+      &:hover {
+        background-color: #0060ff;
+      }
+    }
   }
 
-  p {
-    font-size: 1.5rem;
-    margin-top: 0;
+  .splineContainer {
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+    width: 100%;
+
+    canvas {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
+@media (max-width: 768px) {
+  .splineContainer {
+    > div {
+      margin-top: 120px;
+    }
   }
 }
